# sbexamples

./: CMakeLists.txt  README.md  main.cpp
lib/: app.h  appmain.h  stateless_deleter.h  util.cpp  util.h
movingtri/: CMakeLists.txt  frag.glsl  main.cpp  movingtri.cpp  movingtri.h  vert.glsl
simpletri/: CMakeLists.txt  frag.glsl  main.cpp  simpletri.cpp  simpletri.h  vert.glsl
tesstri/: CMakeLists.txt  geom.glsl  main.cpp  tcs.glsl  tes.glsl  tesstri.cpp  tesstri.h  vert.glsl
x11simpletri/: CMakeLists.txt  glxtri.cpp
